PharmaDemo/src/objects/Promotional_Item__c.object
<CustomObject>
    <fields>
        <fullName>Call_Report__c</fullName>
        <label>Call Report</label>
        <referenceTo>Call_Report__c</referenceTo>
        <relationshipLabel>Promotional Items</relationshipLabel>
        <relationshipName>Promotional_Item</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Promotional Items</relationshipLabel>
        <relationshipName>Promotional_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotional_Product__c</fullName>
        <label>Promotional Product</label>
        <referenceTo>Promotional_Product__c</referenceTo>
        <relationshipLabel>Promotional Items</relationshipLabel>
        <relationshipName>R00Nj0000003oDKzEAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Cost__c * Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Call_Report__r.Id , IMAGE(&quot;/img/icon/tasks16.gif&quot; ,&quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Promotional Item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Promotional Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotional Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>